[package]
name = "ksnp-sys"
version = "0.1.0"
edition = "2024"
publish = false
description = "Bindings for the KSNP library."

[lints]
workspace = true

[dependencies]
link-cplusplus = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cmake = { workspace = true }
pkg-config = { workspace = true }
regex = { workspace = true }
